fixed alignment problem now fix resume problem and pancake recipe

--- a/resume/pages/styles.css
+++ b/resume/pages/styles.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid black;
+    boder: 1px solid black;
 
 }
 
